<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/bottom_image_width"
                android:layout_height="@dimen/bottom_image_height"
                android:id="@+id/bottom_homeicon"
                android:background="@drawable/home_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_home"
                android:textSize="@dimen/bottom_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottom_beachicon"
                android:layout_width="@dimen/bottom_image_width"
                android:layout_height="@dimen/bottom_image_height"
                android:background="@drawable/beach_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_beaches"
                android:textSize="@dimen/bottom_text_size"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottom_activityicon"
                android:layout_width="@dimen/bottom_image_width"
                android:layout_height="@dimen/bottom_image_height"
                android:background="@drawable/activity_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_activities"
                android:textSize="@dimen/bottom_text_size"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bottom_accounticon"
                android:layout_width="@dimen/bottom_image_width"
                android:layout_height="@dimen/bottom_image_height"
                android:background="@drawable/account_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_account"
                android:textSize="@dimen/bottom_text_size"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>