<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="85dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/viewpager_back"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/homedash_back"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/home_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/home_head"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/headtext_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dashboard_height"
                    android:layout_margin="5dp"
                    android:background="@drawable/book_service_dash"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="visible"
                    android:weightSum="100">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/service_dashicon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/service_dash"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="At least 1h before"
                        android:textColor="@color/disabled"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dashboard_height"
                        android:layout_margin="5dp"
                        android:layout_weight="50"
                        android:background="@drawable/book_service_dash"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="100">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/service_dashicon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/spa_dash"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="At least 1h before"
                            android:textColor="@color/disabled"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dashboard_height"
                        android:layout_margin="5dp"
                        android:layout_weight="50"
                        android:background="@drawable/massage_dash"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="100">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/massagebooked_dash" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/Massage_Booked"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="Tomorrow at 10:00"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dashboard_height"
                        android:layout_margin="5dp"
                        android:layout_weight="50"
                        android:background="@drawable/beaches_dash"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="100">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/beaches_dashicon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/beach_dash"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="38 Available"
                            android:textColor="@color/disabled"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dashboard_height"
                        android:layout_margin="5dp"
                        android:layout_weight="50"
                        android:background="@drawable/activity_dash"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="100">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/activities_dashicon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="6dp"
                            android:text="@string/activity_dash"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:text="26 Services"
                            android:textColor="@color/disabled"
                            android:textSize="18sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/checkthisout"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/headtext_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_navigation"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/shop_back" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/shop_name"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/shop_desc"
                        android:textColor="@color/disabled_text"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/starofweek"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/headtext_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/homedash_back"
                android:orientation="horizontal">

                <ocsgroup.com.mmmbeach.Widgets.CircleImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/shop_back"
                    app:civ_border_color="@color/disabled"
                    app:civ_border_width="2dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/massage_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="4dp"
                        android:text="massage name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/massage_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/massage_name"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="4dp"
                        android:text="massage description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <RatingBar
                        android:id="@+id/ratingBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/massage_desc"
                        style="?android:attr/ratingBarStyleSmall"
                        android:numStars="5"
                        android:layout_marginLeft="3dp"
                        android:stepSize="0.1"
                        android:isIndicator="true"
                        android:transformPivotX="0dp" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/massage_plate" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/latestactivity"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/headtext_size"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="@dimen/frag_margin_bottom"
                android:background="@color/transparent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:scrollbars="vertical" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>